--- a/movies-zone/style.css
+++ b/movies-zone/style.css
@@ -24,7 +24,7 @@ nav {
     padding: 10px;
 }
 
-.enter_button button {
+.enter-button button {
     width: 90px;
     height: 35px;
 
@@ -50,6 +50,7 @@ main {
 
     text-align: center;
     border: 1px solid #000;
+    border-radius: 15px;
     background: rgba(0, 128, 0, 0.349);
 }
 
@@ -80,4 +81,77 @@ main {
 .login-button button {
     width: 101%;
     padding: 10px;
+}
+
+.more {
+    width: 80%;
+    margin: auto;
+    margin-block-start: 15px;
+    padding: 20px;
+
+    border-radius: 15px;
+    border: 1px solid #000;
+}
+
+.more h2, p {
+    font-size: 1em;
+    padding: 5px;
+}
+
+.more button {
+    width: 100px;
+    height: 30px;
+    margin: 10px 0 0 0;
+
+    border: none;
+    border-radius: 40px;
+    outline: none;
+
+    cursor: pointer;
+}
+
+.trend {
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+
+    border: 1px solid #000;
+}
+
+.trend-title {
+    padding: 20px 20px 10px 20px;
+}
+
+.item {
+    width: 110px;
+    height: 200px;
+
+    text-align: center;
+    line-height: 200px;
+
+    border-radius: 15px;
+    border: 1px solid #000;
+}
+
+.motives-title {
+    margin: 20px 20px 10px 20px;
+}
+
+.motives {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    border: 1px solid #000;
+}
+
+.mot {
+    width: 80%;
+    height: 150px;
+    padding: 10px;
+
+    border-radius: 15px;
+    border: 1px solid #000;
 }
