--- a/movies-zone/style.css
+++ b/movies-zone/style.css
@@ -9,7 +9,8 @@
 header {
     width: 100%;
     z-index: 1000;
-    background: #ff00006e;
+    color: #fd2b2b;
+    background: #000;
 }
 
 nav {
@@ -25,19 +26,45 @@ nav {
 }
 
 .enter-button button {
+    cursor: pointer;
+    position: relative;
     width: 90px;
     height: 35px;
 
     border: none;
     border-radius: 40px;
+
+    font-weight: 500;
+    color: #fff;
+    z-index: 1;
+    transition: .2s ease;
+}
+
+.enter-button button::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    border-radius: 40px;
+    background: linear-gradient(90deg, #fd2b2b, #b60808);
+    z-index: -1;
+}
+
+.enter-button button:hover {
+    transform: scale(1.1);
 }
 
 main {
     height: auto;
-    background: rgba(0, 0, 255, 0.288);
+    color: #fff;
+    background: linear-gradient(to bottom, #000, #3b0404, #000);
 }
 
 .sign {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,38 +76,79 @@ main {
     margin: auto;
 
     text-align: center;
-    border: 1px solid #000;
+
     border-radius: 15px;
-    background: rgba(0, 128, 0, 0.349);
+    background: #000 url(imagens/movies-back.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.sign::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to top, #6e6e6e5e, #000000ea, #0000009f);
 }
 
 .title {
     margin-block-end: 25px;
-    border: 1px solid #000;
+    z-index: 1;
 }
 
 .desc {
     margin-block-end: 10px;
-    border: 1px solid #000;
+    z-index: 1;
 }
 
 .input-form {
     width: 100%;
-    margin-block-end: 10px;
+    margin: 10px;
+    z-index: 1;
 }
 
 .input-form input {
-    width: 95%;
+    width: 90%;
     padding: 10px;
+
+    border-radius: 40px;
+    border: none;
+
+    font-size: 1.2em;
 }
 
 .login-button {
     width: 100%;
+    z-index: 1;
 }
 
 .login-button button {
-    width: 101%;
+    position: relative;
+    cursor: pointer;
+    width: 96%;
     padding: 10px;
+
+    border-radius: 40px;
+    border: none;
+
+    font-size: 1.2em;
+    font-weight: 500;
+    color: #fff;
+    z-index: 1000;
+}
+
+.login-button button::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 40px;
+    background: linear-gradient(90deg, #fd2b2b, #b60808);
+    z-index: 1;
 }
 
 .more {
@@ -154,4 +222,75 @@ main {
 
     border-radius: 15px;
     border: 1px solid #000;
+}
+
+.late-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    height: 200px;
+    padding: 10px;
+    border: 1px solid #000;
+}
+
+.late-form p, input, button {
+    margin: 10px;
+}
+
+.late-form input {
+    width: 90%;
+    padding: 8px;
+
+    border-radius: 40px;
+    border: none;
+    outline: none;
+
+    font-size: 1.2em;
+}
+
+.late-form button {
+    width: 93%;
+    padding: 8px;
+
+    border-radius: 40px;
+    border: none;
+    outline: none;
+
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+footer {
+    padding: 20px;
+    background: #80006452;
+}
+
+footer p {
+    margin-block: 20px;
+}
+
+footer ul {
+    list-style: none;
+}
+
+footer li {
+    margin-block: 10px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #000;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer #logo {
+    text-align: center;
+    font-size: .9em;
 }
