--- a/nova-site/estilos/style.css
+++ b/nova-site/estilos/style.css
@@ -184,21 +184,29 @@ main {
     margin-block: 20px;
 }
 
-#card-list {
-    list-style: none;
+.scroll-container {
+    display: flex;
+    overflow-x: auto;
+    max-height: 250px;
 }
 
-#card-item {
-    user-select: none;
-    height: 250px;
-    margin: auto;
-    margin-inline: 10px;
+.scroll-container::-webkit-scrollbar {
+    width: 0;
+}
+
+.scroll-container .item {
+    min-width: 110px;
+    height: 200px;
+    margin: 10px;
 
     text-align: center;
-    line-height: 250px;
-    font-size: 2em;
+    line-height: 200px;
 
     border-radius: 10px;
-    color: #fff;
-    background: #000000a2;
+    background: #0000006b;
+    transition: .3s ease-in-out;
+}
+
+.scroll-container .item:hover {
+    transform: scale(1.04);
 }
