--- a/nova-site/estilos/style.css
+++ b/nova-site/estilos/style.css
@@ -82,8 +82,13 @@ header {
 }
 
 main {
-    background: #0000ff48;
+    position: relative;
     height: auto;
+    padding-block-end: 20px;
+    background: #000 linear-gradient(
+        to bottom, #01030a, #06123d, #01030a
+    );
+    z-index: 0;
 }
 
 #hero {
@@ -101,7 +106,7 @@ main {
     border-radius: 0 0 10px 10px;
     
     color: #fff;
-    background: #000000b4;
+    background: #778DA9;
 }
 
 #hero-title {
@@ -117,12 +122,12 @@ main {
     font-size: .9em;
 }
 
-#hero .input-form {
+.input-form {
     display: flex;
     flex-direction: column;
 }
 
-#hero input {
+.input-box input {
     padding: 12px;
     margin: 5px;
     border-radius: 40px;
@@ -131,7 +136,7 @@ main {
     font-size: 1em;
 }
 
-#hero button {
+.input-box button {
     cursor: pointer;
     padding: 12px;
     margin: 5px;
@@ -146,14 +151,33 @@ main {
 }
 
 #promo {
+    position: relative;
     width: 80%;
     padding: 15px;
     margin: auto;
     margin-block: 20px;
 
     border-radius: 10px;
-    border: 1px solid #000000;
+    color: #fff;
+    background: #000000;
     transition: 0.4s ease-in-out;
+}
+
+#promo::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: conic-gradient(
+        #0f2670, #193eb8, #1a42d3, #112770
+    );
+    z-index: -1;
+    padding: 3px ;
+    border-radius: 10px;
+    pointer-events: none;
 }
 
 #promo h2 {
@@ -209,4 +233,64 @@ main {
 
 .scroll-container .item:hover {
     transform: scale(1.04);
+}
+
+#benefits h2 {
+    margin: 20px 0 20px 25px;
+}
+
+.benefit-item {
+    width: 90%;
+    height: 180px;
+
+    padding: 20px;
+    margin: auto;
+    margin-block: 10px;
+
+    border-radius: 10px;
+    border: 1px solid #000000;
+
+    color: #fff;
+    background: #000000be;
+}
+
+.benefit-item h3 {
+    font-size: 1em;
+    font-weight: 500;
+    margin-block-end: 15px;
+}
+
+#sign-up-end .input-box {
+    display: flex;
+    align-items: center;
+
+    text-align: center;
+
+    width: 90%;
+    height: auto;
+    margin: auto;
+    padding: 30px 5px;
+    margin-block: 30px;
+    border: 1px solid #000000;
+}
+
+#sign-up-end .input-box p {
+    margin-block-end: 30px;
+}
+
+
+footer {
+    background: #000000;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #cfcece;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
