--- a/nova-site/estilos/style.css
+++ b/nova-site/estilos/style.css
@@ -60,6 +60,12 @@ header {
 
 #mobile-menu li {
     margin: 20px;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+#mobile-menu li:hover {
+    background: #cccccc71;
 }
 
 #mobile-menu a {
@@ -83,6 +89,11 @@ header {
     color: #fff;
 
     background: #4747ff;
+    transition: 0.3s ease;
+}
+
+#mobile-menu button:hover {
+    background: #2323b8;
 }
 
 main {
@@ -183,6 +194,12 @@ main {
     font-weight: 500;
     color: #fff;
     z-index: 1;
+    transition: .3s ease;
+}
+
+.input-box button:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0 15px #060652, 0 0 25px #4e4ebe;
 }
 
 .input-box button::after {
